--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </li></a>
                     <a class="outer" href="#STIW">
                     <li id="STIW" class="outerEl">
-                        <h3>STIW Lab, <br>Research</h3>
+                        <h3>STIW Lab, Research</h3>
                         <p>______________</p>
                         <p> Starting in Spring of 2024, I worked with the STIW Lab led by Dr. Aakash Gautam, where we focus on dealing with issues of power inequity.
                             <br><br>
