--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Bebas+Neue&family=Funnel+Display:wght@300..800&family=Manrope:wght@200..800&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">   
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Bebas+Neue&family=Funnel+Display:wght@300..800&family=Manrope:wght@200..800&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">   
 
 <!-- Other Fonts -->
     
     
     <link rel="stylesheet" href="static/css/main.css">
     <script defer src="static/js/main.js"></script>
+    <link rel="icon" type="image/x-icon" href="static/imgs/DCLogo.png">
     <title>Daniel Cheng</title>
 </head>
 <body>
