--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a href="#facts" data-section="Fun Facts"></a>
     </div>
 
-    <div id="background">
+<!--     <div id="background">
         
         <img id="background1" src="static/imgs/Rectangle 1.png" alt="">
         <img id="background2" src="static/imgs/Rectangle 2.png" alt="">
@@ -40,7 +40,7 @@
         <!-- <div id="bar"></div> -->
         <!-- <div class="noise"></div> -->
 
-    </div>
+    </div> -->
 
     <div id="backgroundAbout">
         
