--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a href="#facts" data-section="Fun Facts"></a>
     </div>
 
-<!--     <div id="background">
+    <div id="background">
         
         <img id="background1" src="static/imgs/Rectangle 1.png" alt="">
         <img id="background2" src="static/imgs/Rectangle 2.png" alt="">
@@ -40,18 +40,14 @@
         <!-- <div id="bar"></div> -->
         <!-- <div class="noise"></div> -->
 
-    </div> -->
+    </div>
 
-    <div id="backgroundAbout">
+<!--     <div id="backgroundAbout">
         
         <img id="background4" src="static/imgs/Rectangle 4.png" alt="">
         <img id="background5" src="static/imgs/Rectangle 5.png" alt="">
-        <!-- <img id="background6" src="static/imgs/Rectangle 6.png" alt=""> -->
-        <!-- <img id="daniel" src="static/imgs/Group 1.png" alt=""> -->
-        <!-- <div id="bar"></div> -->
-        <!-- <div class="noise"></div> -->
 
-    </div>
+    </div> -->
 
     <div>
         <section id="home">
