--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 
     </div>
 
-<!--     <div id="backgroundAbout">
+    <div id="backgroundAbout">
         
         <img id="background4" src="static/imgs/Rectangle 4.png" alt="">
         <img id="background5" src="static/imgs/Rectangle 5.png" alt="">
 
-    </div> -->
+    </div>
 
     <div>
         <section id="home">
