changed experiences a little

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <a class="outer" href="#PNC">
                     <li class="outerEl" id="PNC">
                         
-                        <h3>PNC SWE Intern, Summer 2025</h3>
+                        <h3>PNC SWE Intern <br> Summer 2025</h3>
                         <p>______________</p>
                         <p> This coming summer of 2025, I will be working as a technology intern at PNC Bank. 
                             I hope to work on a Software Engineering team to build internal/external software applications.
@@ -117,7 +117,7 @@
 
                     <a class="outer" href="#Surr">
                     <li id="Surr" class="outerEl">
-                        <h3>Surreality Lab, Research</h3>
+                        <h3>Surreality Lab <br> Research</h3>
                         <p>______________</p>
                         <p>Since January of 2025, I have worked as a Research Assistant at Surreality Labs, 
                         a lab dedicated to developing solutions in the medical space with cutting-edge spatial-computing, AI, and robotics.
@@ -128,7 +128,7 @@
                     </li></a>
                     <a class="outer" href="#STIW">
                     <li id="STIW" class="outerEl">
-                        <h3>STIW Lab, <br> Research</h3>
+                        <h3>STIW Lab <br> Research</h3>
                         <p>______________</p>
                         <p> Starting in Spring of 2024, I worked with the STIW Lab led by Dr. Aakash Gautam, where we focus on dealing with issues of power inequity.
                             <br><br>
