--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                     <h1>About Me</h1>
                     <p>Hello! My name is Daniel, and I 
                         am a student at the University of 
-                        Pittsburgh pursuing a BSMS in Computer 
-                        Science and a Minor in Music.</p>
+                        Pittsburgh pursuing a double major in Computer 
+                        Science and Violin Performance and a Minor in Business.</p>
                     <!-- <h2>INTERESTS</h2> -->
                     <p>
                         I am heavily interested in web-dev and front-end projects, 
