--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <!-- <h2>INTERESTS</h2> -->
                     <p>
                         I am heavily interested in web-dev and front-end projects, 
-                        UI/UX Design, machine learning, and software engineering. 
+                        UI/UX Design, and machine learning. 
                         I also love puzzles and problem solving!
                         
                         <br><br>
